# musicmeta

./: LICENSE  README.md
musicmeta/: DEVELOPMENT.md  README.md  demo.py  pyproject.toml  requirements.txt  run.bat  run.py  run.sh
musicmeta/src/: main.py
musicmeta/src/core/: __init__.py  audio_loader.py  metadata.py  tag_mapper.py
musicmeta/src/gui/: __init__.py  components.py  main_window.py  theme_manager.py
musicmeta/src/utils/: __init__.py  batch_editor.py
musicmeta/tests/: __init__.py  test_core.py
